# Cofrin-App-Python-FLET

./: .gitignore  pyproject.toml  readme.md  requirements.txt
api_root/: settings.py
src/: main.py
src/Context/: DbContext.py
src/Elements/: NavigationRail.py
src/Models/: Categoria.py  Operacao.py  Recorrencia.py  SubCategoria.py  Usuario.py
src/Services/: AuthService.py
src/Views/: DashboardView.py  LoginView.py  RegisterView.py
src/Views/AppViews/: CategoriasView.py  HomeView.py  MovimentacoesView.py  SubcategoriasView.py
