[project]
name = "projetounicesumar"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Brahms Raymundo", email = "brahmsr@gmail.com" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
appRequirements = [
  "anyio==4.12.0",
  "arrow==1.4.0",
  "binaryornot==0.4.4",
  "certifi==2025.11.12",
  "chardet==5.2.0",
  "charset-normalizer==3.4.4",
  "click==8.3.1",
  "colorama==0.4.6",
  "cookiecutter==2.6.0",
  "flet==0.28.3",
  "flet-cli==0.28.3",
  "flet-desktop==0.28.3",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "idna==3.11",
  "Jinja2==3.1.6",
  "markdown-it-py==4.0.0",
  "MarkupSafe==3.0.3",
  "mdurl==0.1.2",
  "oauthlib==3.3.1",
  "packaging==25.0",
  "Pygments==2.19.2",
  "pypng==0.20220715.0",
  "python-dateutil==2.9.0.post0",
  "python-slugify==8.0.4",
  "PyYAML==6.0.3",
  "qrcode==7.4.2",
  "repath==0.9.0",
  "requests==2.32.5",
  "rich==14.2.0",
  "six==1.17.0",
  "text-unidecode==1.3",
  "toml==0.10.2",
  "typing_extensions==4.15.0",
  "tzdata==2025.2",
  "urllib3==2.6.0",
  "watchdog==4.0.2"
]

compile.app = true # --compile-app
compile.packages = true # --compile-packages
compile.cleanup = true # --cleanup-on-compile

org = "com.mycompany"

product = "projetounicesumar"

company = "Flet"

copyright = "Copyright (C) 2026 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}